# Game_Allegro5

./: CMakeLists.txt  README.md  README_LIBS.MD  main.cpp
Components/: ComponentsInclude.h
Components/AnimationComponent/: AnimationComponent.cpp  AnimationComponent.h
Components/BitmapComponent/: BitmapComponent.cpp  BitmapComponent.h
Components/InputComponent/: InputComponent.cpp  InputComponent.h
Components/SpriteSheetComponent/: SpriteSheetComponent.cpp  SpriteSheetComponent.h
Core/: CoreInclude.h  UIInclude.h  World.cpp  World.h
Core/Animations/Animation/: AAnimation.cpp  AAnimation.h
Core/Animations/AnimationsManager/: AnimationsManager.h
Core/BitmapLoader/: BitmapLoader.cpp  BitmapLoader.h
Core/Defines/: Defines.cpp  Defines.h
Core/Input/: InputManager.cpp  InputManager.h
Core/Main/: Game.cpp  Game.h
Core/Math/: MathInclude.h
Core/Math/CommonMath/: CommonMath.h
Core/Math/Noise/: Noise.cpp  Noise.h  Perlin.cpp  Perlin.h
Core/Math/Vector/: VectorMath.cpp  VectorMath.h
Core/Object/: AObject.cpp  AObject.h
Core/ObjectManager/: ObjectManager.h
Core/Render/: Render.cpp  Render.h
Core/ShaderManager/: ShaderManager.cpp  ShaderManager.h
Core/Statics/: Statics.cpp  Statics.h
Core/UI/: Viewport.cpp  Viewport.h  WidgetManager.cpp  WidgetManager.h
Core/UI/Fonts/: StaticFonts.cpp  StaticFonts.h
Core/UI/Profiler/: Profiler.cpp  Profiler.h
Core/UI/Widget/: Widget.cpp  Widget.h
Engine/: Engine.hpp  STD_DefaultInclude.hpp
Engine/GarbageCollector/: GarbageCollector.cpp  GarbageCollector.hpp
Engine/Lib/GCArray/: GCArray.hpp
Engine/Object/: Object.cpp  Object.hpp
Engine/ObjectManager/: ObjectManager.hpp
Engine_InProgress/: ALLEGRO_DefaultInclude.hpp  CMakeLists.txt  Engine.hpp  STD_DefaultInclude.hpp  main.cpp
Engine_InProgress/Algo/: QuadTree.cpp  QuadTree.hpp
Engine_InProgress/Benchmark/: Benchmark.hpp
Engine_InProgress/BitmapManager/: BitmapManager.cpp  BitmapManager.hpp
Engine_InProgress/Camera/: Camera.cpp  Camera.hpp
Engine_InProgress/Chunk_dev/: Chunk_dev.hpp
Engine_InProgress/EngineDebugger/: EngineDebugger.cpp  EngineDebugger.hpp
Engine_InProgress/Game/: Game.cpp  Game.hpp
Engine_InProgress/GarbageCollector/: GarbageCollector.hpp
Engine_InProgress/Input/: InputManager.cpp  InputManager.hpp
Engine_InProgress/Input/InputComponent/: InputComponent.hpp
Engine_InProgress/Lib/GCArray/: GCArray.hpp
Engine_InProgress/Lib/Transform/: Transform.hpp
Engine_InProgress/Memory/: Memory.cpp  Memory.hpp
Engine_InProgress/Object/: Object.cpp  Object.hpp
Engine_InProgress/ObjectManager/: ObjectManager.hpp
Engine_InProgress/Physics/: PhysicsComponent.hpp
Engine_InProgress/Render/: Render.cpp  Render.hpp
Engine_InProgress/Resources/Shaders/: ChunkGroundGenerator.glsl  ChunkGroundMaskGenerator.glsl  Dirt.glsl  Grass.glsl  MossyCobblestone.glsl  TerrainBlending.glsl  Vertex.glsl  Water.glsl
Engine_InProgress/Scene/: Scene.cpp  Scene.hpp
Engine_InProgress/Scene/SceneObject/: SceneObject.hpp
Engine_InProgress/SceneManager/: SceneManager.cpp  SceneManager.hpp
Engine_InProgress/SceneObject/: SceneObject.hpp
Engine_InProgress/ShaderManager/: ShaderManager.cpp  ShaderManager.hpp
Engine_InProgress/Shaders/: Perlin.glsl
Engine_InProgress/TestObjects/: TestSceneObjectWithPhysics.hpp
Engine_InProgress/Transforms/: Transform.cpp  Transform.hpp
Engine_InProgress/Transforms/Primitive/: Rectangle.hpp  Transform.hpp  Vector.hpp
Engine_InProgress/UI/: UI.hpp
Engine_InProgress/UI/ButtonWidget/: ButtonWidget.cpp  ButtonWidget.hpp
Engine_InProgress/UI/Canvas/: CanvasWidget.cpp  CanvasWidget.hpp
Engine_InProgress/UI/Container/: Container.cpp  Container.hpp
Engine_InProgress/UI/Fonts/: Fonts.hpp
Engine_InProgress/UI/HorizontalBox/: HorizontalBox.cpp  HorizontalBox.hpp
Engine_InProgress/UI/HorizontalContainer/: HorizontalContainer.cpp  HorizontalContainer.hpp
Engine_InProgress/UI/TextWidget/: TextWidget.cpp  TextWidget.hpp
Engine_InProgress/UI/VerticalBox/: VerticalBox.cpp  VerticalBox.hpp
Engine_InProgress/UI/Widget/: Widget.cpp  Widget.hpp
Engine_InProgress/UI/WidgetManager/: WidgetManager.hpp
Engine_InProgress/World/Chunk/: Chunk.cpp  Chunk.hpp
Engine_InProgress/World/ChunkManager/: ChunkManager.cpp  ChunkManager.hpp
Engine_InProgress/WorldGeneration/Chunk/: Chunk.cpp  Chunk.hpp
Engine_InProgress/WorldGeneration/WorldLoader/: WorldLoader.cpp  WorldLoader.hpp
SceneObjects/: SceneInclude.h
SceneObjects/Camera/: Camera.cpp  Camera.h
SceneObjects/Player/: APlayer.cpp  APlayer.h
SceneObjects/Scene/: AScene.cpp  AScene.h
SceneObjects/SceneObject/: SceneObject.cpp  SceneObject.h
SceneObjects/StaticObject/: StaticObject.cpp  StaticObject.h
Shaders/World/: Perlin.glsl
WorldGeneration/ChunkManager/: AChunkManager.cpp  AChunkManager.h
